# kash

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh
.codecrafters/: compile.sh  run.sh
.github/workflows/: ci.yml
src/: builtins.c  builtins.h  completions.c  completions.h  input.c  input.h  main.c  path.c  path.h  utils.c  utils.h
src/builtins/: cd.c  cd.h  complete.c  complete.h  declare.c  declare.h  echo.c  echo.h  exit.c  exit.h  history.c  history.h  jobs.c  jobs.h  pwd.c  pwd.h  type.c  type.h
src/lib/: config.c  config.h  history.c  history.h  input.c  input.h  jobs.c  jobs.h  path.c  path.h  strings.c  strings.h  terminal.c  terminal.h  variables.c  variables.h  vector.c  vector.h
src/repl/: completions.c  completions.h  executor.c  executor.h  io.c  io.h  parser.c  parser.h  shell.c  shell.h
